# techdoc-parser

./: .gitignore  PROJECTPLAN.md  README.md  TODO.md  check_techdoc_parse_result.py  pyproject.toml
output/: introduction-flight-test-engineering.md  mil-std-882e.json  mil-std-882e.md  mil_std_882e.json  mil_std_882e.md
src/techdoc_parser/: __init__.py  cli.py  parser.py
src/techdoc_parser/core/: __init__.py  models.py
src/techdoc_parser/exporters/: __init__.py  json_exporter.py  markdown_exporter.py
src/techdoc_parser/ingestion/: __init__.py  pdf_loader.py
src/techdoc_parser/normalization/: __init__.py  text.py
src/techdoc_parser/structure/: __init__.py  figures.py  headings.py  page_furniture.py  paragraphs.py  tables.py
tests/: test_cli.py  test_core_models.py  test_figure_detection.py  test_figure_table_interaction.py  test_heading_detection.py  test_json_exporter.py  test_markdown_exporter.py  test_package.py  test_page_furniture.py  test_paragraph_grouping.py  test_pdf_loader.py  test_pipeline_integration.py  test_table_detection.py  test_text_normalization.py
